test_suite/tests/ui/conflict/adjacent-tag.stderr
error: enum tags `conflict` for type and content conflict with each other
 --> $DIR/adjacent-tag.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

